--- a/app/src/main/res/layout-land/card_restaurant.xml
+++ b/app/src/main/res/layout-land/card_restaurant.xml
@@ -12,7 +12,7 @@
     app:cardMaxElevation="10dp"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true"
-    android:id="@+id/cardview_restaurant"
+    android:id="@+id/cardview_favourite"
     tools:ignore="MissingDefaultResource">
 
     <!--
@@ -33,7 +33,7 @@
 
         <!--ImageVIew to display our Course Image-->
         <ImageView
-            android:id="@+id/icon_card_restaurant"
+            android:id="@+id/icon_card_favourite"
             android:layout_width="@dimen/image_view_list"
             android:layout_height="@dimen/image_view_list"
             android:layout_margin="10dp"
@@ -43,13 +43,13 @@
             />
 
         <ProgressBar
-            android:id="@+id/progress_bar_card_restaurant"
+            android:id="@+id/progress_bar_card_favourite"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_alignStart="@+id/icon_card_restaurant"
-            android:layout_alignTop="@+id/icon_card_restaurant"
-            android:layout_alignEnd="@+id/icon_card_restaurant"
-            android:layout_alignBottom="@+id/icon_card_restaurant"
+            android:layout_alignStart="@+id/icon_card_favourite"
+            android:layout_alignTop="@+id/icon_card_favourite"
+            android:layout_alignEnd="@+id/icon_card_favourite"
+            android:layout_alignBottom="@+id/icon_card_favourite"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
@@ -59,28 +59,28 @@
 
 
         <TextView
-            android:id="@+id/textview_card_restaurant_title"
+            android:id="@+id/textview_card_favourite_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
-            android:layout_toEndOf="@id/icon_card_restaurant"
+            android:layout_toEndOf="@id/icon_card_favourite"
             android:text="titolo"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textview_card_restaurant_category"
+            android:id="@+id/textview_card_favourite_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
-            android:layout_toEndOf="@id/textview_card_restaurant_title"
+            android:layout_toEndOf="@id/textview_card_favourite_title"
             android:text="Categoria"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_medium"
@@ -88,15 +88,15 @@
 
 
         <TextView
-            android:id="@+id/textview_card_restaurant_adress"
+            android:id="@+id/textview_card_favourite_adress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textview_card_restaurant_title"
+            android:layout_below="@id/textview_card_favourite_title"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:gravity="left"
-            android:layout_toEndOf="@id/icon_card_restaurant"
+            android:layout_toEndOf="@id/icon_card_favourite"
             android:textSize="@dimen/text_size_small"
             android:drawablePadding="2dp"
             android:text="Via ancona 13 - Palazzolo"
@@ -106,12 +106,12 @@
             android:id="@+id/textview_card_restaurant_tag1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textview_card_restaurant_adress"
+            android:layout_below="@id/textview_card_favourite_adress"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:gravity="left"
-            android:layout_toEndOf="@id/icon_card_restaurant"
+            android:layout_toEndOf="@id/icon_card_favourite"
             android:textSize="@dimen/text_size_micro"
             android:drawablePadding="2dp"
             android:text="Tag 1"
@@ -125,7 +125,7 @@
             android:layout_margin="10dp"
             android:padding="0dp"
             android:layout_marginStart="10dp"
-            android:layout_below="@id/icon_card_restaurant"
+            android:layout_below="@id/icon_card_favourite"
             android:src="@drawable/ic_baseline_star_24"
             app:tint="@color/yellow_star" />
 
@@ -134,7 +134,7 @@
             android:layout_width="@dimen/star"
             android:layout_height="@dimen/star"
 
-            android:layout_below="@id/icon_card_restaurant"
+            android:layout_below="@id/icon_card_favourite"
             android:layout_marginStart="-10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -149,7 +149,7 @@
             android:layout_width="@dimen/star"
             android:layout_height="@dimen/star"
 
-            android:layout_below="@id/icon_card_restaurant"
+            android:layout_below="@id/icon_card_favourite"
             android:layout_marginStart="0dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -163,7 +163,7 @@
             android:layout_width="@dimen/star"
             android:layout_height="@dimen/star"
 
-            android:layout_below="@id/icon_card_restaurant"
+            android:layout_below="@id/icon_card_favourite"
             android:layout_marginStart="0dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -177,7 +177,7 @@
             android:layout_width="@dimen/star"
             android:layout_height="@dimen/star"
 
-            android:layout_below="@id/icon_card_restaurant"
+            android:layout_below="@id/icon_card_favourite"
             android:layout_marginStart="0dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -190,7 +190,7 @@
             android:id="@+id/textview_card_restaurant_number_review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/icon_card_restaurant"
+            android:layout_below="@id/icon_card_favourite"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
