--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -25,8 +25,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.1"
-                />
+                app:layout_constraintVertical_bias="0.1" />
 
             <Button
                 android:id="@+id/btn_test_crea_ristorante"
@@ -37,7 +36,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_test_crea_notifica"
-                app:layout_constraintVertical_bias="0.1"/>
+                app:layout_constraintVertical_bias="0.1" />
+
+            <Button
+                android:id="@+id/btn_test_crea_favourite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="crea preferiti"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_test_crea_ristorante" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
