--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -4,24 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".notifications.Fragment_Notification_List">
-
-
-    <TextView
-        android:id="@+id/textview_filter_notifications_list"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:paddingStart="20dp"
-        android:paddingEnd="50dp"
-        android:text="Ordina"
-        app:layout_constraintEnd_toEndOf="@+id/swipe_refresh_fragment_favourite"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"
-        tools:ignore="MissingConstraints"></TextView>
+    tools:context=".restaurant.Fragment_Favourite">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_view_fragment_favourite"
@@ -33,10 +16,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.00"
-        app:layout_constraintStart_toEndOf="@+id/textview_filter_notifications_list"
+        app:layout_constraintHorizontal_bias="0.099"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.009"
         app:showAsAction="ifRoom|collapseActionView" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -55,10 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            tools:listitem="@layout/card_notification_normal" />
+            tools:listitem="@layout/card_restaurant_favourite" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
