--- a/app/src/main/res/layout/activity_drawer_menu_admin.xml
+++ b/app/src/main/res/layout/activity_drawer_menu_admin.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_menu_user"
-        app:menu="@menu/menu_user"/>
+        app:menu="@menu/menu_admin"/>
 
 
 
