--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -46,6 +46,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="0.1"
                 app:layout_constraintTop_toBottomOf="@+id/btn_test_crea_ristorante" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
