--- a/app/src/main/res/menu/menu_admin.xml
+++ b/app/src/main/res/menu/menu_admin.xml
@@ -1,4 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_admin_notifications"
+            android:icon="@drawable/ic_baseline_notifications_active_24"
+            android:title="Notifications" />
+        <item
+            android:id="@+id/nav_admin_profile"
+            android:icon="@drawable/ic_baseline_person_24"
+            android:title="Profile" />
+
+        <item
+            android:id="@+id/nav_admin_restaurant"
+            android:icon="@drawable/ic_baseline_restaurant_24"
+            android:title="My Restaurant" />
+
+        <item
+            android:id="@+id/nav_admin_logout"
+            android:icon="@drawable/ic_baseline_logout_24"
+            android:title="Logout" />
+        <item
+            android:id="@+id/nav_user_test"
+            android:title="Test" />
+    </group>
 </menu>
