--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".restaurant.Fragment_Favourite">
+    tools:context=".restaurant.Fragment_Favourites">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_view_fragment_favourite"
